@@ -1,3 +1,4 @@
+1145443860	Allianztags können nun alle drei Tage geändert werden.
 1145413304	Neues Feature: Koordinatenlesezeichen.
 1145413295	Dringender Bugfix: Roboterhandel.
 1143747314	Ajax-Feature in die Karte eingebaut, schnelleres Wechseln des Systems.
